--- a/css/media.css
+++ b/css/media.css
@@ -46,6 +46,7 @@
     }
 
     .section2 {
+        width: 100%;
         padding: 5px 0 10px 0;
     }
 
@@ -58,7 +59,7 @@
     }
 
     .section2 li:last-child {
-        margin-right: 0;
+        margin-right: -10px;
     }
 
     .navigation {
